# SingleFileMovementAnalysis

./: .gitignore  LICENCE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
demos/side_view_exp/01_pal_exp_subaih/vel_headway_rho/: UX_20_1_transformation_additional_vel_h_rho.txt  steady_state_values
demos/top_view_exp/01_schoolGymBay_mainCircle_germany/vel_headway_rho/: GymBay_main_15_1_transformation_additional_straight_traj_vel_h_rho.txt
helper/: experiments.py  helper.py  plotsettings.mplystyle
notebooks/: side_view_experiments.ipynb  top_view_experiments.ipynb  user_guide.ipynb
notebooks/demo_data/genderFemale_germany_paetzke2023/rho_vel_headway/: croma_female_04_1.txt  croma_female_08_1.txt
notebooks/demo_data/genderMale_palestine_subaih2019/vel_headway_rho/: UM_14_1_transformation_additional_vel_h_rho.txt  UM_14_2_transformation_additional_vel_h_rho.txt  UM_14_3_transformation_additional_vel_h_rho.txt  UM_19_1_transformation_additional_vel_h_rho.txt  (+3 more)
scripts/: experiments.py  helper.py  plots_style.py
scripts/01_trajectory_data_preperation/: 00_traj_file_format.py  00_transformation_additional.py  01_transformation_additional.py  01_transformation_straight_traj.py  02_transformation_straight_traj.py
scripts/02_calculate_vel_rho_headway/: 00_cal_vel_rho_headway.py  01_extract_steadyState_data.py  01_extract_steady_state_data.py  experiments.py
scripts/03_plotting/: 00_plot_traj_raw.py  00_plot_trajectories.py  01_plot_traj_straight.py  02_plot_timeseries_rho_v.py  03_plot_rho_h_vel.py  04_plot_data_binning.py  05_plot_x_t.py  experiments.py
scripts/lib/: experiments.py
scripts/sfma_01_trajectory_data_preperation/: sfma_00_traj_file_format.py  sfma_01_transformation_additional.py  sfma_02_transformation_straight_traj.py
scripts/sfma_02_calculate_vel_rho_headway/: sfma_00_cal_vel_rho_headway.py  sfma_01_extract_steady_state_data.py
scripts/sfma_03_plotting/: sfma_00_plot_trajectories.py  sfma_02_plot_timeseries_rho_v.py  sfma_03_plot_rho_h_vel.py  sfma_04_plot_data_binning.py  sfma_05_plot_x_t.py
single_file_movement_analysis/: experiments.py  helper.py
(+53 files in other folders)
